--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="photo-and-name">
         <img src="profile.png" class="photo" alt="Profile Picture">
         <div class="contact-info-box">
-            <h1 class="name">Muhammad Owais</h1>
+            <h1 class="name">Matthew Rocha</h1>
             <br>
-            <h3 class="job-title">IT Manager</h3>
-            <p class="contact-details">Phone: +92-344-4XX3-1XX &nbsp; - &nbsp; Email: contact@muhammadovi.com</p>
+            <h3 class="job-title">Pharmacy Technician</h3>
+            <p class="contact-details">Phone: +972-357-6066 &nbsp; - &nbsp; Email: contact@mattrochacpht@gmail.com</p>
         </div>
     </div>
     <div id="objective">
