--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="contact-info-box">
             <h1 class="name">Matthew Rocha</h1>
             <br>
-            <h3 class="job-title">Pharmacy Technician</h3>
+            <h3 class="job-title">Certified Pharmacy Technician</h3>
             <p class="contact-details">Phone: +972-357-6066 &nbsp; - &nbsp; Email: contact@mattrochacpht@gmail.com</p>
         </div>
     </div>
@@ -29,15 +29,14 @@
         <table>
             <tr class="Plano East SR High">
                 <td rowspan="2">2013</td>
-                <td><b>School-1</b>:Graduated High School</td>
+                <td><b>Graduated High School</td>
             </tr>
             <tr class="UNT">
-                <td><b>School-2</b>: UNT Bachelors of arts in Science 2023-</td>
+                <td><b>UNT Bachelors of arts in Science 2023-</td>
             </tr>
             
             <tr>
-                <td style="width: 120px; color: gray;">2015 - 2017</td>
-                <td><b>Intermediate</b>: Board of Intermediate Karachi - Private</td>
+                <td style="width: 120px; color: gray;">2015 - 
             </tr>
         </table>
     </div>
@@ -47,11 +46,6 @@
             <tr class="work-1">
                 <td>2013-Present</td>
                 <td><b>United Supermarkets, Market Street Pharmacy</Supermark></b>: Floater Pharmacy Technician</td>
-            </tr>
-            <tr class="work-2">
-                <td>2015 - Present</td>
-                <td><b>Reliable Punching</b>: More than 2 years' experience as an IT Manager and Customer Service Representative</td>
-            </tr>
  
         </table>
     </div>
@@ -60,7 +54,7 @@
         <table>
             <tr>
                 <td>F'Name:</td>
-                <td><b>Matthew Rocha</b></td>
+                <td><b>Matthew Joseph Cezar Rocha</b></td>
             </tr>
             <tr>
                 <td>Date of Birth:</td>
