--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
    
 <div id="page">
     <div class="photo-and-name">
-        <img src="profile.png" class="photo" alt="Profile Picture">
+        <img src="FullSizeRender.jpeg" class="photo" alt="Profile Picture">
         <div class="contact-info-box">
             <h1 class="name">Matthew Rocha</h1>
             <br>
             <h3 class="job-title">Certified Pharmacy Technician</h3>
-            <p class="contact-details">Phone: +972-357-6066 &nbsp; - &nbsp; Email: contact@mattrochacpht@gmail.com</p>
+            <p class="contact-details">Phone: +972-357-6066 &nbsp; - &nbsp; Email: mattrochcpht@gmail.com</p>
         </div>
     </div>
     <div id="objective">
@@ -26,19 +26,15 @@
     </div>
     <div id="education">
         <h3>Education</h3>
-        <table>
-            <tr class="Plano East SR High">
-                <td rowspan="2">2013</td>
-                <td><b>Graduated High School</td>
+          <table>
+            <tr class="work-1">
+                <td>2015-2017</td>
+                <td><b>Collin College, Misc. classes </td>
             </tr>
-            <tr class="UNT">
-                <td><b>UNT Bachelors of arts in Science 2023-</td>
-            </tr>
-            
-            <tr>
-                <td style="width: 120px; color: gray;">2015 - 
-            </tr>
-        </table>
+            <tr class="work-2">
+                <td>2023-Present</td>
+                <td><b>UNT Bachelors of Arts in Biology</td>
+        </table>      
     </div>
     <div id="work">
         <h3>Experience</h3>
@@ -53,7 +49,7 @@
         <h3>Bio-Data</h3>
         <table>
             <tr>
-                <td>F'Name:</td>
+                <td>Name:</td>
                 <td><b>Matthew Joseph Cezar Rocha</b></td>
             </tr>
             <tr>
